# STM32_FreeRTOS_Modules

./: .mxproject  CMakeLists.txt  Makefile  STM32_FreeRTOS_Example.ioc  shell.nix
CSL/: CMakeLists.txt
CSL/Inc/: csl.h  definitions.h  pin_communication.h  setup.h  task_communication.h
CSL/Lib/Nanopb/: pb.h  pb_common.c  pb_common.h  pb_decode.h  pb_encode.c  pb_encode.h
CSL/Lib/Nanopb/extra/: FindNanopb.cmake
CSL/Src/: pin_communication.cpp  setup.cpp  task_communication.cpp
Core/Inc/: main.h  stm32defines.h
Core/Src/: main.c  main.cpp
Modules/: CMakeLists.txt
Modules/Counting/Inc/: counting_entry.h
Modules/Counting/Src/: counting_entry.cpp
Modules/TaskCommunicationT1/Inc/: tc1_entry.h
Modules/TaskCommunicationT1/Src/: tc1_entry.cpp
Modules/TaskCommunicationT2/Inc/: tc2_entry.h
Modules/TaskCommunicationT2/Src/: tc2_entry.cpp
Modules/ToggleLED/Inc/: toggleled_entry.h
Modules/ToggleLED/Src/: toggleled_entry.c  toggleled_entry.cpp
cmake/stm32cubemx/: CMakeLists.txt
